[gd_scene load_steps=7 format=3 uid="uid://c7gx3q41xhcby"]

[ext_resource type="Script" path="res://scripts/building/door.gd" id="2_38sqd"]
[ext_resource type="Texture2D" uid="uid://bshm7mm0ixdf6" path="res://assets/sprites/building/doors/TEMP_door_brown_right_thin.png" id="2_gvfwt"]

[sub_resource type="Animation" id="Animation_w74tq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_chska"]
resource_name = "door_fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.25, 0.375, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.376471), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0.74902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098)]
}

[sub_resource type="Animation" id="Animation_gxsee"]
resource_name = "door_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.25, 0.375, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.74902), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0.376471), Color(1, 1, 1, 0.25098)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_abj35"]
_data = {
"RESET": SubResource("Animation_w74tq"),
"door_fade_in": SubResource("Animation_chska"),
"door_fade_out": SubResource("Animation_gxsee")
}

[node name="Door" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(0, 1)
collision_mask = 2
script = ExtResource("2_38sqd")
closed_door_sprite_name = "TEMP_door_brown_right_thin.png"
open_door_sprite_name = "TEMP_door_brown_right.png"
direction = "RIGHT"

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-3, -58)
texture = ExtResource("2_gvfwt")
offset = Vector2(0, -200)

[node name="CollisionArea" type="CollisionPolygon2D" parent="."]
position = Vector2(-3, -260)
polygon = PackedVector2Array(-106, 187, 80, 278, 96, 269, 95, 287, 81, 298, -18.6064, 248.727, -107, 205)

[node name="ClickArea" type="Area2D" parent="."]
position = Vector2(-2, -5)

[node name="ClickShape" type="CollisionPolygon2D" parent="ClickArea"]
position = Vector2(-1, -253)
polygon = PackedVector2Array(-103, -223, 95, -136, 95, -136, 96, 287, 78, 298, -107, 205)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_abj35")
}

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
